js/src/tests/test262/built-ins/NativeErrors/SyntaxError/proto-from-ctor-realm.js
var
other
=
262
.
createRealm
(
)
.
global
;
var
newTarget
=
new
other
.
Function
(
)
;
var
err
;
newTarget
.
prototype
=
undefined
;
err
=
Reflect
.
construct
(
SyntaxError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
SyntaxError
.
prototype
'
newTarget
.
prototype
is
undefined
'
)
;
newTarget
.
prototype
=
null
;
err
=
Reflect
.
construct
(
SyntaxError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
SyntaxError
.
prototype
'
newTarget
.
prototype
is
null
'
)
;
newTarget
.
prototype
=
true
;
err
=
Reflect
.
construct
(
SyntaxError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
SyntaxError
.
prototype
'
newTarget
.
prototype
is
a
Boolean
'
)
;
newTarget
.
prototype
=
'
'
;
err
=
Reflect
.
construct
(
SyntaxError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
SyntaxError
.
prototype
'
newTarget
.
prototype
is
a
String
'
)
;
newTarget
.
prototype
=
Symbol
(
)
;
err
=
Reflect
.
construct
(
SyntaxError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
SyntaxError
.
prototype
'
newTarget
.
prototype
is
a
Symbol
'
)
;
newTarget
.
prototype
=
Infinity
;
err
=
Reflect
.
construct
(
SyntaxError
[
]
newTarget
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
err
)
other
.
SyntaxError
.
prototype
'
newTarget
.
prototype
is
a
Number
'
)
;
reportCompare
(
0
0
)
;
